Disabling h-screen on main app element

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
   </head>
   <body class="leading-normal tracking-normal text-white gradient">
-    <div id="app" class="flex flex-col h-screen min-h-screen"></div>
+    <div id="app" class="flex flex-col min-h-screen"></div>
     <script type="module" src="/src/main.js"></script>
     
   </body>
